fixxing background color flickering

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,11 +24,11 @@ $SecondaryText: #1A1A1A;
   padding: 0;
   list-style-type: none;
   text-decoration: none;
-  cursor: pointer;
 }
 a {
   text-decoration: none;
   color: unset;
+  background-color: white;
 }
 
 h1, h2, h3 , h4, h5{
