--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -1,7 +1,7 @@
 .page__tutorboost {
   width: 100%;
   height: 100%;
- 
+  outline: none;
   .page__tutorboost-img {
     display: block;
     width: 100%;
@@ -9,4 +9,7 @@
     // max-width: 2500px; /* Set a max width to prevent the image from becoming too large on larger screens */
     margin: 0 auto; /* Center the image horizontally */
   }
+}
+.page__tutorboost:focus {
+  outline: none;
 }
